# mfdl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mediafire_dl/: __main__.py  parser.py
mfdl/: cli.py  downloader.py
tests/: test_cli.py  test_downloader.py  test_parser.py
