[project]
name = "mfdl"
version = "0.1.0"
description = "Fast MediaFire file and folder downloader with parallel chunked downloads"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "rich>=13.7",
    "typer>=0.12",
    "tenacity>=8.2",
]

[project.scripts]
mfdl = "mfdl.cli:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["mfdl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # long lines acceptable in URL strings and type annotations

[tool.pytest.ini_options]
testpaths = ["tests"]
